--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,17 +88,16 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="355dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="450dp"
+        android:layout_width="360dp"
+        android:layout_height="76dp"
+        android:layout_marginTop="490dp"
         android:backgroundTint="#40BFFF"
         android:text="@string/button_1"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.652" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
